# legal-scraper

./: .env.example  .gitignore  Dockerfile  README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
legal_scraper/: __init__.py
legal_scraper/adapters/: __init__.py  base.py  example.py
legal_scraper/analytics/: __init__.py  citations.py  stats.py
legal_scraper/core/: __init__.py  retry.py  scraper.py  storage.py  timing.py
legal_scraper/quality/: __init__.py  dedup.py  reporter.py  validator.py
tests/: __init__.py  conftest.py  test_quality.py  test_retry.py  test_scraper.py  test_storage.py  test_timing.py
